Current state of the Implementation chapter is edited. (Minus the server part)

--- a/TP3/dissertation/Implementation/client.tex
+++ b/TP3/dissertation/Implementation/client.tex
@@ -11,14 +11,14 @@ While implementing the client, it became clear that some of our larger design ch
     \begin{center}
         \includegraphics[scale=0.6]{Implementation/diagrams/login.png}
         \includegraphics[scale=0.6]{Implementation/diagrams/main.png}
-        \caption{The login, and main window of the GIM Client}
+        \caption{The login panel and main window of the GIM Client}
         \label{MainWindowDia}
     \end{center}
 \end{figure}
 
-In the design section we outlined how we envisioned the flow of information between the controller and networking components would work. When we started coding the controller component, it became clear that it would be more sensible for it to be made up of multiple classes. In our design, we thought the controller would be made up of one class, which implemented the two interfaces created in the design stage. These interfaces would handle incoming and outgoing commands in the GIM protocol. However, as we began writing method stubs, our controller class looked bloated, and incorporated too many responsibilities. Instead, we created two classes - one to handle events for outgoing traffic, and one to handle incoming traffic, implementing the `networkingOut' and `networkingIn' interfaces respectively.
+In the design section we outlined how we envisioned the flow of information between the controller and networking components would work. When we started coding the controller component, it became clear that it would be more sensible for it to be made up of multiple classes. In our design, we thought the controller would be made up of one class, which implemented the two interfaces created in the design stage. These interfaces would handle incoming and outgoing commands in the GIM protocol. However, as we began writing method stubs, our controller class looked bloated, and incorporated too many responsibilities. Instead, we created two classes: one to handle events for outgoing traffic, and one to handle incoming traffic, implementing the `networkingOut' and `networkingIn' interfaces respectively.
 
-To create the networking component, the client had to create an instance of the `ClientConnection' class and pass the network a ``ServerConnection'' object. It used this object to call methods after receiving commands from the server. There is a further difference here from our design. Our original plan was to have the controller thread waiting until a buffer between the networking component and controller component had a new message from the server. This thread would then parse it and call a method within the controller. However, as our understanding of threading progressed, we realised that this plan would not work as the interface can only be accessed from the GUI thread. After some confusion attempting to implement our ill informed design, we had to investigate an alternative method of altering the GUI. Upon further learning of concurrency in Swing, we discovered that Swing has a `buffer' (named the ``Event Queue'') of its own, that could be used as an alternative to queue GUI events.\footnote{See http://www.kauss.org/Stephan/swing/index.html for a more detailed discussion of the Swing Event Queue.} To use this event queue, it is necessary to wrap any code you wish to run on the GUI thread in an anonymous class implementing ``Runnable'' as a parameter to the ``invokeLater()'' method.  While it would be possible to read commands off our own buffer, and then buffer alterations to the GUI in to event queue, we thought this would be redundant behaviour as there would then be two intermediate queues. Instead, we decided the appropriate method would be called directly from the network reader, and the event queue would be used where it was necessary to alter the interface.
+To create the networking component, the client had to create an instance of the ClientConnection class and pass the network a ServerConnection object. It used this object to call methods after receiving commands from the server. There is a further difference here from our design. Our original plan was to have the controller thread waiting until a buffer between the networking component and controller component had a new message from the server. This thread would then parse it and call a method within the controller. However, as our understanding of threading progressed, we realised that this plan would not work as the interface can only be accessed from the GUI thread. After some confusion attempting to implement our ill informed design, we had to investigate an alternative method of altering the GUI. Upon further learning of concurrency in Swing, we discovered that Swing has a `buffer' (named the ``Event Queue'') of its own, that could be used as an alternative to queue GUI events.\footnote{See http://www.kauss.org/Stephan/swing/index.html for a more detailed discussion of the Swing Event Queue.} To use this event queue, it is necessary to wrap any code you wish to run on the GUI thread in an anonymous class implementing a method called Runnable as a parameter to the invokeLater method.  While it would be possible to read commands off our own buffer, and then buffer alterations to the GUI in to event queue, we thought this would be redundant behaviour as there would then be two intermediate queues. Instead, we decided the appropriate method would be called directly from the network reader, and the event queue would be used where it was necessary to alter the interface.
 
 In retrospect, we may have abused this option in our implementation. There are some operations we add to the Swing Event Queue that do not effect the interface. In some cases, this is necessary as some information has to be changed in order to keep operations sequential. However, there are some cases where it is not clear if operations need to be run on the event queue. Furthermore, in some cases our program appeared to working as expected, except in some fringe cases. After much work, we found we had not wrapped code that needed to be synchronized in the event queue. A possible alternative would be to have used our original plan of reading commands from the buffer, parsing them in the controller, and calling the appropriate method. Since most almost all commands from the server effect the GUI, all method calls could have been wrapped in the event queue at this stage. This would have served to have kept our code tidier (as the event queue would only be used once), and have inherently solved many of the threading problems we had by not invoking the event queue. As we only incrementally became aware of methods that required the event queue, it is clear we did not have a full understanding of the problems of threading in the early stages. By tackling this project, we have since learned the need for more careful consideration of threading issues.
 
@@ -28,7 +28,7 @@ In the section \ref{networking_design}, we outlined how we believed commands fro
     \begin{center}
         \includegraphics[scale=0.5]{Implementation/diagrams/single_chat.png}
         \includegraphics[scale=0.5]{Implementation/diagrams/group_chat.png}
-        \caption{The login, and main window of the GIM Client}
+        \caption{Examples of single and group chat windows in GIM.}
         \label{MainWindowDia}
     \end{center}
 \end{figure}
@@ -48,7 +48,7 @@ Creation:
 \item Server responds with `created' and the room id.
 \item Client matches the type of chat with the `new room' queue, and the user list from the `invitations' queue.
 \item Client spawns the appropriate chat window (and adds to the list of chat windows), or updates the internal state information of an existing window in the window list, associated with the participant. Information includes who is in the room and the id to send messages to.
-\item Client is informed that the participant has joined the room, through the `joined' argument in the \texttt{:ROOM:} command.
+\item Client is informed that the participant has joined the room, through the \texttt{JOINED} argument in the \texttt{:ROOM:} command.
 \end {enumerate}
 
 Invitation:
@@ -58,16 +58,15 @@ Invitation:
 \item Server responds with `Personal' or `Group.'
 \item Client matches request with response from the `invited' queue.
 \item Client spawns the appropriate chat window (and adds to the list of chat windows), or updates the internal state information of an existing window, in the window list, associated with the participant. Information includes who is in the room and the id to send messages to.
-\item Client is informed that the participant has joined the room, through the `joined' argument in the \texttt{:ROOM:} command.
+\item Client is informed that the participant has joined the room, through the \texttt{JOINED} argument in the \texttt{:ROOM:} command.
 \item If it is a group chat, client asks server for the user list in the room.
 \end{enumerate}
 
-In retrospect, the trade off between keeping an abstract protocol--which could be used for different styles of implementation--and designing towards our own client and server may have been too high. Aside from the communication between the client and the server, there are complexities within the client code to ensure these events are performed in sequence which left much opportunity for error in the control of threading. For example, a user should not be allowed to send a message before the conversation participant has also joined the room, in the case of a personal chat between steps 6 and 7 (In the "Creation" plan). This meant that safeguards had to be considered during this sequence of events to ensure messages were not dropped, while ensuring the user did not have to `wait' for the other user to enter the room before entering a message. This motivated the need for a boolean value, internal to chat windows, indicating whether the chat participant was in the room. While this value is false, messages to be sent are buffered until it turns true. A further issue of synchronization was internal to the code. Since the GUI was running on a separate thread from the incoming networking thread, it was conceivable that an incoming message could occur before the internal room id was updated in step 6. In fact, this issue was subtle enough that it was not recognised until late in development. In retrospect, part of our problem was from not identifying where the Swing event queue needed to be used (as discussed in section \ref{design_impl}), as well as the complex set of events that needed to occur to establish a chat. Throughout this project, we became more aware of the careful approach required when using threads. 
+In retrospect, the trade off between keeping an abstract protocol--which could be used for different styles of implementation--and designing towards our own client and server may have been too high. Aside from the communication between the client and the server, there are complexities within the client code to ensure these events are performed in sequence which left much opportunity for error in the control of threading. For example, a user should not be allowed to send a message before the conversation participant has also joined the room, in the case of a personal chat between steps 6 and 7 (in the ``Creation'' plan). This meant that safeguards had to be considered during this sequence of events to make sure messages were not dropped, while ensuring the user did not have to `wait' for the other user to enter the room before entering a message. This motivated the need for a boolean value, internal to chat windows, indicating whether the chat participant was in the room. While this value is false, messages to be sent are buffered until it turns true. A further issue of synchronization was internal to the code. Since the GUI was running on a separate thread from the incoming networking thread, it was conceivable that an incoming message could occur before the internal room id was updated in step 6. In fact, this issue was subtle enough that it was not recognised until late in development. In retrospect, part of our problem was from not identifying where the Swing event queue needed to be used (as discussed in section \ref{design_impl}), as well as the complex set of events that needed to occur to establish a chat. Throughout this project, we became more aware of the careful approach required when using threads. 
 
-Additionally, the use of room numbers in the protocol made routing messages to the appropriate window challenging. A participant can 'leave' a personal chat by closing the window, and the user may then send an additional message. This meant it was important for the internal roomid of the user's chat window to be set to "-1" indicating that the participant has left, and the room has to be re-created through the \texttt{:CREATE:} command before the next message may be sent. This involved buffering this message to be sent, till the user has joined the new room (as described previously).  The server will then select a new roomid, resulting in the participant having to create a new chat window, and the user's roomid having to be updated for the chat window with this participant. The participant's window must not be displayed till the first message is received, which was possible through Swing's 'setVisible()' method. This behaviour was not required for group chats, as when a participant leaves a group chat they must be re-invited to continue chat in this group. This was surprising, as we expected group chats to be more challenging to implement. When a user leaves, the group chat updates the user list by using the "users" argument in the protocol's {:ROOM:} command. On receiving the reply, the appropriate window to update the user list in is identified by the room id specified in the server's reply.   
+Additionally, the use of room numbers in the protocol made routing messages to the appropriate window challenging. A participant can `leave' a personal chat by closing the window, and the user may then send an additional message. This meant it was important for the internal room id of the user's chat window to be set to `-1' indicating that the participant has left, and the room has to be re-created through the \texttt{:CREATE:} command before the next message may be sent. This involved buffering the message to be sent till the user has joined the new room (as described previously). The server will then select a new room id, resulting in the participant having to create a new chat window and the user's roomid to be updated for the chat window with this participant. The participant's window must not be displayed till the first message is received, which was possible through Swing's setVisible method. This behaviour was not required for group chats, as when a participant leaves a group chat they must be re-invited to continue chat in this group. This was surprising, as we expected group chats to be more challenging to implement. When a user leaves, the group chat updates the user list by using the \texttt{USERS} argument in the protocol's \texttt{:ROOM:} command. On receiving the reply, which includes the room id, the appropriate window's user list is updated.
 
-Through these challenges, and discovering only small changes to the original protocol specification were required, we discovered that our protocol was fit for purpose. Additionally, we learned how clients and servers must collaborate to achieve functionality. We learned the complexities involved in using a protocol, and how it is possible to keep a protocol abstract, but functional. 
-
+Through these challenges, and discovering only small changes to the original protocol specification were required, we discovered that our protocol was fit for purpose. Additionally, we learned how clients and servers must collaborate to achieve functionality. We learned the complexities involved in using a protocol, and how it is possible to keep a protocol abstract but functional.
 
 \subsection{Evolution of Code}
 \label{code_evol}
@@ -78,4 +77,4 @@ Another significant evolution in our code, also centred around our use of Swing,
 
 This outcome was advantageous as this code could be re-used in group chats, which gave the user list in group chats the same appearance as the friend list. This replaced the textual user list we originally had, and greatly improved the appearance of the interface.  
 
-Another problem that required a significant change to our code, and made our client more suited to future changes, was the need to reconcile the atomicity of the networking component, with events that needed to occur during the login process. Our original approach was for the client to wait for the \texttt{:AUTHORISED:} command from the GIM protocol, before changing the interface from the log on screen to the buddy list. The client would then ask the server for an update of the user's friends list, and their information. This was problematic because there was a delay in the update of the buddy list information, which meant the default values would be displayed, for example their e-mail address in place of the nickname. This was a result of the networking component being blind to the state of the user interface. Our solution was to delegate some more responsibilities to the networking  component, outside parsing the protocol and translating these into methods. On first receiving the \texttt{:INFO:} command from the server, the component now informed the model that the user information was initialised, allowing the buddy list to be displayed. This went against our design principle of having the networking component only have the role of implementing the GIM protocol, but this trade-off solved the problem of having inconsistent information on the user's interface. 
+Another problem that required a significant change to our code, and made our client more suited to future changes, was the need to reconcile the atomicity of the networking component with events that needed to occur during the login process. Our original approach was for the client to wait for the \texttt{:AUTHORISED:} command from the GIM protocol, before changing the interface from the log on screen to the buddy list. The client would then ask the server for an update of the user's friends list, and their information. This was problematic because there was a delay in the update of the buddy list information, which meant the default values would be displayed, for example their e-mail address in place of the nickname. This was a result of the networking component being blind to the state of the user interface. Our solution was to delegate some more responsibilities to the networking  component, outside parsing the protocol and translating these into methods. On first receiving the \texttt{:INFO:} command from the server, the component now informed the model that the user information was initialised, allowing the buddy list to be displayed. This went against our design principle of having the networking component only have the role of implementing the GIM protocol, but this trade-off solved the problem of having inconsistent information on the user's interface. 
