--- a/TP3/dissertation/Implementation/server.tex
+++ b/TP3/dissertation/Implementation/server.tex
@@ -1,6 +1,6 @@
 \section{Server}
 
-This section will analyse how well the server implementation fulfils the design outlined in section \ref{ServerDesign}. In general, the implementation of the server was a straight-forward affair with very few problems encountered during it's development. The most challenging part of the server's development related to concurrency, and is discussed in \ref{concur}. Spelling errors and typos were the most common cause of problems, however given their easy to fix nature, are not discussed.
+This section will analyse how well the server implementation fulfills the design outlined in section \ref{ServerDesign}. In general, the implementation of the server was a straight-forward affair with very few problems encountered during its development. The most challenging part of the server's development related to concurrency, and is discussed in section \ref{concur}. Spelling errors and typos were the most common cause of problems, however given their easy-to-fix nature, they are not discussed.
 
 \subsection{Networking}
 The GIM server uses Java's built in Sockets and ServerSockets.  Ohhh yeah.
