huh? what did i modify? :S

--- a/TP3/dissertation/Evaluation/server.tex
+++ b/TP3/dissertation/Evaluation/server.tex
@@ -1,7 +1,7 @@
 \section{Server Evaluation}
 \label{server_eval}
 
-In the earlier stages of our project, the server was in a more complete state than our client. This meant we had to develop a method of testing it in isolation, without using the client. We decided an appropriate method would be to send raw protocol commands via Telnet.\footnote{\texttt{http://www.telnet.org/}} Telnet allows a connection to be made to a socket, and text to be sent within this connection. As we were in an environment of Computing Science students who were comfortable with such technical tests, we were able to test the server's capability to handle several user accounts simultaneously with help from some volunteers. Furthermore, as a group we have been trained to have testing in mind, and attempts were made to make the server fail by sending it erroneous data to parse from clients.
+In the earlier stages of our project, the server was in a more complete state than our client. This meant we had to develop a method of testing it in isolation, without using the client. We decided an appropriate method would be to send raw protocol commands via Telnet.\footnote{\texttt{http://www.telnet.org/}} Telnet allows a connection to be made to a socket, and text to be sent within this connection. As we were in an environment of Computing Science students who were comfortable with such technical tests, we were able to test the server's capability to handle several user accounts simultaneously with help from some volunteers. As a group we have been trained to have testing in mind, and attempts were made to make the server fail by sending it erroneous data to parse from clients.
 
 The primary result these early tests yielded, other than spelling errors, was that the server had trouble when a user authenticated in multiple locations. When a user logs in in multiple locations, the server should send the first logged-in client an error message, stating that the account is now logged in at another location. The server then kills the first connection and accept commands from the new client. The server performed these tasks, but did not read commands from the new client. This identified a threading issue which was then corrected. Positively, it gave an early indication that the server was capable of handling many connections at once, and that it was handling the \texttt{:ROOM:} command to the degree that users could chat. Naturally, it would be difficult to test some of the more subtle functions of the server using Telnet, but these tests made it clear that the server was progressing well. It might have been useful if we'd made a Java program to automate tests in a more formal test harness, and used these through the lifetime of the project. 	
 
