--- a/TP3/dissertation/Evaluation/client.tex
+++ b/TP3/dissertation/Evaluation/client.tex
@@ -3,6 +3,6 @@
 
 The key aspect of an instant messaging client is ensuring messages get delivered to the correct person and the correct window. It was necessary to establish a way of proving that this worked in every case. This is difficult, as messages take a complicated path through the system. For instance, when a message is received by the network component, a method in the controller is called, which then finds the window corresponding to the sender. In some cases, the delivery of a message has to wait until a window has been created by the Swing thread. The difficulty of proving that a message has been delivered was illustrated by the different behaviours of our program in different environments. During the Christmas break, work was being conducted on our home computers (running Windows and Linux), where we found no evidence of messages being dropped. Upon returning to the university, the first message received was dropped approximately half the time, and an empty chat window appeared. As discussed in section \ref{collab}, we discovered this was a threading issue, where the networking thread `overtook' the GUI thread in an attempt to route the message before the window was created. We were able to discover this by using debugging messages at each stage in the message routing process and in the window creation process. By moving events from the network thread that modified the GUI to the event queue instead, we proved as well as we could that messages would be delivered. As messages were always received from the server in order, the event queue ensured a room would be created before it received a message. 
 
-Additionally, it was important to test that incoming commands were parsed correctly. 
+Additionally, it was important to test that incoming commands were parsed correctly - particularly the more complex \texttt{INFO} command. This involved printing  
 
 
