wrote more in evaluation...

--- a/TP3/dissertation/Evaluation/client.tex
+++ b/TP3/dissertation/Evaluation/client.tex
@@ -5,3 +5,5 @@ The key aspect of an instant messaging client is ensuring messages get delivered
 
 Additionally, it was important to test that incoming commands were parsed correctly - particularly the more complex \texttt{INFO} command. This involved printing the commands as they were received in full, and then printing the arguments that were sent to methods that were called to perform the command's functionality. If the correct method was called corresponding to an incoming command, and the correct arguments given to the function, then the command had been parsed correctly. This method was used for each incoming command to test the functionality of the networking component. Additionally, we checked that all outgoing messages to the server were attempted to be sent. These two straightforward methods were all that was required to conclude that the networking component was working properly in full.
 
+Other features were tested in a less structured manner, and were aided by volunteering Computing Science students who were eager to try and break the client. One such occasion where a user was able to produce undesired behaviour was when it was discovered that it was possible to inject html into sending messages, which would then be displayed in the chat window. This allowed users to set their nicknames as html tables, and resize their fonts to huge sizes, for example. This was possible, as we implemented the ability to use smilies by using a Swing component that supports html as the message display box. We resolved this issue by replacing HTML brackets with their 'special entity' characters.\footnote{http://htmlhelp.com/reference/html40/entities/special.html} 
+
